// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a FormattedAddress with a name 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#070A15",
        "display": "flex",
        "fontFamily": "Inter-Regular",
        "fontSize": 16,
        "lineHeight": 24,
      },
    ]
  }
>
  Test Account
</Text>
`;

exports[`renders a FormattedAddress without a name 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#070A15",
        "display": "flex",
        "fontFamily": "Inter-Regular",
        "fontSize": 16,
        "lineHeight": 24,
      },
    ]
  }
>
  0xf3...2266
</Text>
`;
